--- a/themes/default/templates/transfer_money.html
+++ b/themes/default/templates/transfer_money.html
@@ -65,7 +65,7 @@ button {
 <body>
     <div class="container">
         <h1>Transfer Funds</h1>
-        <form action="/" method="POST">
+        <form  method="POST">
             <label for="fromAccount">From Account:</label>
             <select id="fromAccount" name="fromAccount" required>
                 <option value="account1">Chequing</option>
