--- a/themes/default/templates/interac_e-transfer.html
+++ b/themes/default/templates/interac_e-transfer.html
@@ -64,7 +64,7 @@ button {
 <body>
     <div class="container">
         <h1>Interac e-Transfer</h1>
-        <form action="process_transfer.php" method="POST">
+        <form  method="POST">
             <label for="recipient">Recipient Email:</label>
             <input type="email" id="recipient" name="recipient" required>
             <label for="amount">Amount:</label>
