--- a/themes/default/templates/interac_e-transfer.html
+++ b/themes/default/templates/interac_e-transfer.html
@@ -1,4 +1,6 @@
 {% extends 'index.html' %}
+{% load static %}
+
 {% block styles %}
 <style>
     body {
@@ -58,7 +60,7 @@ button {
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet">
     <title>Interac e-Transfer</title>
 </head>
 <body>
